Fixing more stuff, working now with the external server

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -87,7 +87,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:text="Wifi &amp; Access Points"
+                                android:text="Home"
                                 android:id="@+id/textView4"
                                 android:gravity="center_vertical|center_horizontal" />
 
@@ -96,16 +96,28 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
-                                android:text="WiFi Access Points"
-                                android:theme="@style/ThemeAppCompatLight" />
+                                android:text="WiFi Access Points" />
 
                             <Button
                                 android:id="@+id/trustedAccessPointsButton"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
-                                android:text="Trusted Access Points"
-                                android:theme="@style/ThemeAppCompatLight" />
+                                android:text="Trusted Access Points" />
+
+                            <Button
+                                android:id="@+id/updateButton"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="Update" />
+
+                            <Button
+                                android:id="@+id/statisticsButton"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:text="Statistics" />
 
                             <!--<Button-->
                                 <!--android:id="@+id/debugLogButton"-->
